fix typo `runs-on`

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,7 +12,7 @@ jobs:
   build:
     name: Build
 
-    runs_on: ubuntu-latest
+    runs-on: ubuntu-latest
     container: python:3.9-slim
 
     steps:
